--- a/public/css/innovacion.tuxtla.css
+++ b/public/css/innovacion.tuxtla.css
@@ -11514,17 +11514,17 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
     padding: .5rem .75rem;
     margin-left: -1px;
     line-height: 1.25;
-    color: #007bff;
+    color: #107e77;
     background-color: #fff;
     border: 1px solid #dee2e6
 }
 
 .page-link:hover {
     z-index: 2;
-    color: #0056b3;
+    color: #107e77;
     text-decoration: none;
     background-color: #e9ecef;
-    border-color: #dee2e6
+    border-color: #0d5e58
 }
 
 .page-link:focus {
@@ -11547,12 +11547,12 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff
+    background-color: #107e77;
+    border-color: #107e77
 }
 
 .page-item.disabled .page-link {
-    color: #6c757d;
+    color: #107e77;
     pointer-events: none;
     cursor: auto;
     background-color: #fff;
@@ -33757,12 +33757,12 @@ a.text-muted:hover {
 }
 
 .accent-primary .page-item .page-link {
-    color: #007bff
+    color: #107e77
 }
 
 .accent-primary .page-item.active .page-link, .accent-primary .page-item.active a {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #107e77;
+    border-color: #107e77;
     color: #fff
 }
 
@@ -35340,4 +35340,16 @@ a.text-muted:hover {
 .border-green-custom{
     border: solid #107e77 1px ;
 }
+
+.sin_borde {
+    border: none;
+    box-shadow: none;
+    transition: none;
+}
+
+.font-weight-700{
+    color: #404041;
+    font-weight: 700;
+}
+
 /*# sourceMappingURL=adminlte.min.css.map */
